Fixed a bug in name unseen flags in thread view. Added hidden button to collapse the mailbox list but commented out for now.

--- a/webmail/www/css/app/nav.css
+++ b/webmail/www/css/app/nav.css
@@ -121,6 +121,13 @@ body > header a.icon.button {
   text-transform: uppercase;
 }
 
+#collapse-mailboxes {
+  color: #e1e1e1;
+  display: inline-block;
+  font-size: 2rem;
+  margin-left: 1.5rem;
+}
+
 nav {
   bottom: 0;
   box-sizing: border-box;
